<resources>
    <string name="app_name">LiaoTian</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">请输入账号...</string>
    <string name="prompt_password">请输入密码...</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">请输入昵称</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="alpha_v1_0">Alpha v1.0</string>
    <string name="是否退出">是否退出？</string>
    <string name="yes">是</string>
    <string name="no">否</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
